--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>teste</h1>
     <h2>Testando de novo</h2>
     <h3>Teste 3</h3>
+    <h4>teste 4</h4>
 
     <script src="script.js"></script>
 </body>
